@@ -1,6 +1,7 @@
 
 Version 0.8.8   - xx January 2002
   * Allow pychecker to be imported (import pychecker.check)
+  * Using vars() for format string argument works like locals()
   * Fix -a/--initattr warning to actually warn when attributes 
         are set outside of __init__(), but not in __init__()
   * Fix spurious warnings for unreachable code (not enough to enable, yet)
